<resources>
    <string name="app_name">petsworld</string>
    <string name="action_settings">Settings</string>
    <string name="apodo">Apodo</string>
    <string name="edad">Edad</string>
    <string name="animal">Animal</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string-array name="sexo">
        <item>@string/macho</item>
        <item>@string/hembra</item>
    </string-array>
    <string name="crear_mascota">Crear Mascota</string>
    <string name="crear">Crear</string>
    <string name="limpiar">Limpiar</string>
    <string name="nuevo">Nuevo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardado_exitoso">Guardado exitosamente!</string>
    <string name="genero">Genero</string>
    <string name="loro">Loro</string>
    <string name="perro">Perro</string>
    <string name="gato">Gato</string>
    <string name="conejo">Conejo</string>
    <string-array name="animales">
        <item>@string/loro</item>
        <item>@string/perro</item>
        <item>@string/gato</item>
        <item>@string/conejo</item>
    </string-array>
</resources>
